# moveint_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: kobo-kinect-calib.yaml  kobo-nuitrack-calib.yaml  kobo-realsense-calib.yaml  kobo_handover.rviz  moveint_kobo.launch  moveint_pepper.launch  nuitrack.launch  nuitrack_pepper_tf.yaml  pepper_bringup.launch  prepare_kobo.launch  prepare_pepper.launch  rmdn_kobo.launch  rmdn_pepper.launch
models_final/: moveint_nuitrack_kobo.pth  rmdvae_kobo_leftin_bihandover.pth  rmdvae_nuisi_pepper.pth
robots/: blaise_panda_dual.urdf  frames.gv  generate_chains.py  hand.urdf  panda  panda_left_arm.json  panda_right_arm.json  pepper_chain.ipynb  tf_transform_listener.py
src/: kobo_force_reader.py  nuitrack_node.py  pepper_visualizer.py  reset_kobo.py  reset_pepper.py  rmdn_kobo_node.py  rmdn_pepper_node.py  rmdvae_kobo_handover_kinect.py  rmdvae_kobo_handover_nuitrack.py  rmdvae_kobo_node.py  rmdvae_kobo_node_optitrack.py  rmdvae_pepper_node.py
src/utils/: __init__.py  helper.py  nuitrack.py  robot.py  visualization.py
